crates/tsuno-driver/tests/fixtures/snapshots/pass/infers_body_ref_spec_var.rs
fn main() {
    let x = 1;
    let r = &x;
    //@ assert "?V == *{r}"
    let _ = ();
    //@ assert "V == *{r}"
    let _ = ();
}
